--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^12.1.10",
     "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
+    "http-proxy-middleware": "^2.0.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
