Fixed client Vercel settings

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -2,11 +2,11 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://studius-server.vercel.app/api/:path*"
+      "destination": "https://studius-server-v2.vercel.app/api/:path*"
     },
     {
       "source": "/api/:path*/",
-      "destination": "https://studius-server.vercel.app/api/:path*/"
+      "destination": "https://studius-server-v2.vercel.app/api/:path*/"
     }
   ]
 }
