--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "byte-size": "^8.0.0",
     "dayjs": "^1.10.6",
     "dotenv": "^10.0.0",
     "http-proxy-middleware": "^2.0.1",
