--- a/client/package.json
+++ b/client/package.json
@@ -6,26 +6,26 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@date-io/moment": "1.x",
+    "@date-io/moment": "2.13.1",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "byte-size": "^8.0.0",
     "dayjs": "^1.10.6",
-    "dotenv": "^10.0.0",
+    "dotenv": "^16.0.0",
     "http-proxy-middleware": "^2.0.1",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0",
     "react-test-renderer": "^17.0.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "set PORT=4000 && react-scripts start",
